<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">
        <RadioButton
            android:id="@+id/rbPhoneCall"
            style="@style/radio_button"
            android:text="@string/call_phone" />

        <RadioButton
            android:id="@+id/rbSendEmail"
            style="@style/radio_button"
            android:text="@string/send_email" />

        <RadioButton
            android:id="@+id/rbLearn"
            style="@style/radio_button"
            android:text="@string/learn_to_play" />

        <RadioButton
            android:id="@+id/rbSendPic"
            style="@style/radio_button"
            android:text="@string/sendPic" />

        <RadioButton
            android:id="@+id/rbSendInternalPic"
            style="@style/radio_button"
            android:text="@string/sendInternalPic" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tile"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="297dp"
        android:layout_marginBottom="218dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGroup" />

    <Button
        android:id="@+id/btnGo"
        style="@style/radio_button"
        android:layout_marginStart="162dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="115dp"
        android:text="@string/go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>